<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_about_title"
            android:layout_width="wrap_content"
            android:layout_height="71dp"
            android:text="@string/about_title"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/textView_about_description"
            android:layout_width="262dp"
            android:layout_height="106dp"
            android:gravity="center"
            android:text="@string/about_description" />

        <TextView
            android:id="@+id/textView_about_APIs"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:gravity="center"
            android:text="@string/about_APIs" />

        <TextView
            android:id="@+id/textView_about_version"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:text="@string/about_version" />

        <TextView
            android:id="@+id/textView_about_developers"
            android:layout_width="wrap_content"
            android:layout_height="49dp"
            android:text="@string/about_developers" />

    </LinearLayout>
</FrameLayout>