<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:outlineSpotShadowColor="@color/black"
    tools:context=".fragments.SummaryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="241dp"
        android:background="@color/darkBackgroundColor"
        android:elevation="5dp"
        android:orientation="horizontal"
        android:outlineAmbientShadowColor="@color/black">

        <ImageView
            android:id="@+id/imageView_summary_cover"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:adjustViewBounds="true"
            android:background="@drawable/border"
            android:contentDescription="@string/summary_imageDescription"
            android:scaleType="fitCenter"
            tools:ignore="ImageContrastCheck"
            tools:src="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:elevation="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_summary_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_summary_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/status" />

            <TextView
                android:id="@+id/textView_summary_highestRated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp" />

            <TextView
                android:id="@+id/textView_summary_mostPopular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp" />

            <TextView
                android:id="@+id/textView_summary_averageScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp" />

            <RatingBar
                android:id="@+id/ratingBar_summary_rating"
                style="@style/Widget.AppCompat.RatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="true"
                android:numStars="5"
                android:rating="2"
                android:stepSize="0.1"
                tools:ignore="SpeakableTextPresentCheck" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom">

                <Button
                    android:id="@+id/button_summary_favourite"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/favourite"
                    android:textColor="@color/primaryDarkColor" />
            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:isScrollContainer="true"
        android:scrollIndicators="right">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_summary_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="14sp" />
        </LinearLayout>
    </ScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_summary_chapters"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>